--- a/src/sample/interfaceJavaFx.fxml
+++ b/src/sample/interfaceJavaFx.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.effect.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
@@ -19,26 +21,38 @@
    <children>
       <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="389.0" prefWidth="428.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
          <children>
-            <AnchorPane layoutX="-10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="389.0" prefWidth="447.0">
+            <AnchorPane prefHeight="389.0" prefWidth="447.0" translateX="1.0" translateY="1.0" translateZ="1.0">
                <children>
-                  <Pane layoutX="120.0" layoutY="-25.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="341.0" prefWidth="313.0" AnchorPane.bottomAnchor="73.0" AnchorPane.leftAnchor="120.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="-25.0">
+                  <Pane layoutX="-6.0" layoutY="-8.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="414.0" prefWidth="470.0">
                      <children>
-                        <Button fx:id="v1h1" layoutX="65.0" layoutY="92.0" mnemonicParsing="false" onAction="#setMove1" prefHeight="65.0" prefWidth="65.0" />
-                        <Button fx:id="v1h2" layoutX="130.0" layoutY="92.0" mnemonicParsing="false" onAction="#setMove2" prefHeight="65.0" prefWidth="65.0" />
-                        <Button fx:id="v1h3" layoutX="195.0" layoutY="92.0" mnemonicParsing="false" onAction="#setMove3" prefHeight="65.0" prefWidth="65.0" />
-                        <Button fx:id="v2h1" layoutX="65.0" layoutY="157.0" mnemonicParsing="false" onAction="#setMove4" prefHeight="65.0" prefWidth="65.0" />
-                        <Button fx:id="v2h2" layoutX="130.0" layoutY="157.0" mnemonicParsing="false" onAction="#setMove5" prefHeight="65.0" prefWidth="65.0" />
-                        <Button fx:id="v2h3" layoutX="195.0" layoutY="157.0" mnemonicParsing="false" onAction="#setMove6" prefHeight="65.0" prefWidth="65.0" />
-                        <Button fx:id="v3h1" layoutX="65.0" layoutY="222.0" mnemonicParsing="false" onAction="#setMove7" prefHeight="65.0" prefWidth="65.0" />
-                        <Button fx:id="v3h2" layoutX="130.0" layoutY="222.0" mnemonicParsing="false" onAction="#setMove8" prefHeight="65.0" prefWidth="65.0" />
-                        <Button fx:id="v3h3" layoutX="195.0" layoutY="222.0" mnemonicParsing="false" onAction="#setMove9" prefHeight="65.0" prefWidth="65.0" />
+                        <Button fx:id="v1h1" layoutX="163.0" layoutY="92.0" mnemonicParsing="false" onAction="#setMove1" prefHeight="65.0" prefWidth="65.0" />
+                        <Button fx:id="v1h2" layoutX="228.0" layoutY="92.0" mnemonicParsing="false" onAction="#setMove2" prefHeight="65.0" prefWidth="65.0" />
+                        <Button fx:id="v1h3" layoutX="293.0" layoutY="92.0" mnemonicParsing="false" onAction="#setMove3" prefHeight="65.0" prefWidth="65.0" />
+                        <Button fx:id="v2h1" layoutX="163.0" layoutY="157.0" mnemonicParsing="false" onAction="#setMove4" prefHeight="65.0" prefWidth="65.0" />
+                        <Button fx:id="v2h2" layoutX="228.0" layoutY="157.0" mnemonicParsing="false" onAction="#setMove5" prefHeight="65.0" prefWidth="65.0" />
+                        <Button fx:id="v2h3" layoutX="293.0" layoutY="157.0" mnemonicParsing="false" onAction="#setMove6" prefHeight="65.0" prefWidth="65.0" />
+                        <Button fx:id="v3h1" layoutX="163.0" layoutY="222.0" mnemonicParsing="false" onAction="#setMove7" prefHeight="65.0" prefWidth="65.0" />
+                        <Button fx:id="v3h2" layoutX="228.0" layoutY="222.0" mnemonicParsing="false" onAction="#setMove8" prefHeight="65.0" prefWidth="65.0" />
+                        <Button fx:id="v3h3" layoutX="293.0" layoutY="222.0" mnemonicParsing="false" onAction="#setMove9" prefHeight="65.0" prefWidth="65.0" />
+                        <Label fx:id="msg" layoutX="28.0" layoutY="26.0" prefHeight="48.0" prefWidth="376.0" textFill="#eb0505">
+                           <font>
+                              <Font size="26.0" />
+                           </font>
+                        </Label>
+                        <CheckBox fx:id="player2CL" layoutX="30.0" layoutY="101.0" mnemonicParsing="false" onAction="#setPlayer2" prefHeight="24.0" prefWidth="86.0" text="Player 2" />
+                        <CheckBox fx:id="player1CL" layoutX="30.0" layoutY="74.0" mnemonicParsing="false" onAction="#setPlayer1" text="Pleyer 1" />
                      </children>
                   </Pane>
-                  <CheckBox fx:id="player1CL" layoutX="23.0" layoutY="55.0" mnemonicParsing="false" onAction="#setPlayer1" text="Pleyer 1" />
-                  <CheckBox fx:id="player2CL" layoutX="23.0" layoutY="85.0" mnemonicParsing="false" onAction="#setPlayer2" prefHeight="24.0" prefWidth="86.0" text="Player 2" />
-                  <Button layoutX="34.0" layoutY="268.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="65.0" text="Save" />
+                  <Button fx:id="save" layoutX="34.0" layoutY="268.0" mnemonicParsing="false" onAction="#saveToFile" prefHeight="26.0" prefWidth="65.0" text="Save" />
                   <Button fx:id="resetBtn" layoutX="34.0" layoutY="303.0" mnemonicParsing="false" onAction="#resetGame" prefHeight="26.0" prefWidth="65.0" text="Reset" />
+                  <Button fx:id="upload" layoutX="34.0" layoutY="339.0" mnemonicParsing="false" onAction="#uploadgame" text="Upload " />
                </children>
+               <padding>
+                  <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
+               </padding>
+               <rotationAxis>
+                  <Point3D />
+               </rotationAxis>
             </AnchorPane>
          </children>
       </Pane>
