--- a/src/sample/interfaceJavaFx.fxml
+++ b/src/sample/interfaceJavaFx.fxml
@@ -40,7 +40,7 @@
                            </font>
                         </Label>
                         <CheckBox fx:id="player2CL" layoutX="30.0" layoutY="101.0" mnemonicParsing="false" onAction="#setPlayer2" prefHeight="24.0" prefWidth="86.0" text="Player 2" />
-                        <CheckBox fx:id="player1CL" layoutX="30.0" layoutY="74.0" mnemonicParsing="false" onAction="#setPlayer1" text="Pleyer 1" />
+                        <CheckBox fx:id="player1CL" layoutX="30.0" layoutY="74.0" mnemonicParsing="false" onAction="#setPlayer1" text="Player 1" />
                      </children>
                   </Pane>
                   <Button fx:id="save" layoutX="34.0" layoutY="268.0" mnemonicParsing="false" onAction="#saveToFile" prefHeight="26.0" prefWidth="65.0" text="Save" />
