--- a/src/sample/interfaceJavaFx.fxml
+++ b/src/sample/interfaceJavaFx.fxml
@@ -39,8 +39,11 @@
                               <Font size="26.0" />
                            </font>
                         </Label>
-                        <CheckBox fx:id="player2CL" layoutX="30.0" layoutY="101.0" mnemonicParsing="false" onAction="#setPlayer2" prefHeight="24.0" prefWidth="86.0" text="Player 2" />
-                        <CheckBox fx:id="player1CL" layoutX="30.0" layoutY="74.0" mnemonicParsing="false" onAction="#setPlayer1" text="Player 1" />
+                        <RadioButton fx:id="player2CL" layoutX="30.0" layoutY="101.0" mnemonicParsing="false" onAction="#setPlayer2" prefHeight="24.0" prefWidth="86.0" text="Player 2">
+                           <toggleGroup>
+                              <ToggleGroup fx:id="toggleGroup" />
+                           </toggleGroup></RadioButton>
+                        <RadioButton fx:id="player1CL" layoutX="30.0" layoutY="74.0" mnemonicParsing="false" onAction="#setPlayer1" text="Player 1" toggleGroup="$toggleGroup" />
                      </children>
                   </Pane>
                   <Button fx:id="save" layoutX="34.0" layoutY="268.0" mnemonicParsing="false" onAction="#saveToFile" prefHeight="26.0" prefWidth="65.0" text="Save" />
